# oops

./: .gitignore  README.md  demo.tape  pyproject.toml
oops/: cli.py  llm.py  shell.py
